tests/build/invalid/syntax-quote.kappa.build.kp
-- expect: E_CONFIG_RESTRICTED_FORM
-- §35.2.2: a config-expression evaluator must not admit first-class syntax values.
let q = '{ 1 }
let buildConfig : BuildConfig = package { name = "x", version = semver "1", sourceRoots = [], fragmentAxes = [], dependencies = [], hostBindings = [], targets = [] }
